css/style.css
/* ... */
.btn-outline:hover,
.btn-outline:focus,
.btn-outline:active,
.btn-outline.active {
    border: solid 2px #fff;
    color: #666666;
    background: #fff;
}

.floating-label-form-group {
    position: relative;
    margin-bottom: 0;
    padding-bottom: .5em;
    border-bottom: 1px solid #eee;
}

.floating-label-form-group input,
.floating-label-form-group textarea {
    z-index: 1;
    position: relative;
    padding-right: 0;
    padding-left: 0;
    border: 0;
    border-radius: 0;
    font-size: 1.5em;
    background: 0 0;
    box-shadow: none!important;
    resize: none;
}

.floating-label-form-group label {
    display: block;
    z-index: 0;
    position: relative;
    top: 2em;
    margin: 0;
    font-size: .85em;
    line-height: 1.764705882em;
    vertical-align: middle;
    vertical-align: baseline;
    opacity: 0;
    transition: top .3s ease,opacity .3s ease;
}

.floating-label-form-group::not(:first-child) {
    padding-left: 14px;
    border-left: 1px solid #eee;
}

.floating-label-form-group-with-value label {
    top: 0;
    opacity: 1;
}

.floating-label-form-group-with-focus label {
    color: #666666;
}

form .row:first-child .floating-label-form-group {
    border-top: 1px solid #eee;
}

footer {
    color: #fff;
}

footer h3 {
    margin-bottom: 30px;
}

footer .footer-above {
    padding-top: 50px;
    background-color: #2c3e50;
}

footer .footer-col {
    margin-bottom: 50px;
}

footer .footer-below {
    padding: 25px 0;
    background-color: #373737;
}

.btn-social {
    display: inline-block;
    width: 50px;
    height: 50px;
    border: 2px solid #fff;
    border-radius: 100%;
    text-align: center;
    font-size: 20px;
    line-height: 45px;
}

.btn:focus,
.btn:active,
.btn.active {
    outline: 0;
}

.scroll-top {
    z-index: 1049;
    position: fixed;
    right: 2%;
    bottom: 2%;
    width: 50px;
    height: 50px;
}

.scroll-top .btn {
    width: 50px;
    height: 50px;
    border-radius: 100%;
    font-size: 20px;
    line-height: 28px;
}

.scroll-top .btn:focus {
    outline: 0;
}

.portfolio-modal .modal-content {
    padding: 100px 0;
    min-height: 100%;
    border: 0;
    border-radius: 0;
    text-align: center;
    background-clip: border-box;
    box-shadow: none;
}

.portfolio-modal .modal-content h2 {
    margin: 0;
    font-size: 3em;
}

.portfolio-modal .modal-content img {
    margin-bottom: 30px;
}

.portfolio-modal .modal-content .item-details {
    margin: 30px 0;
}

.portfolio-modal .close-modal {
    position: absolute;
    top: 25px;
    right: 25px;
    width: 75px;
    height: 75px;
    background-color: transparent;
    cursor: pointer;
}

.portfolio-modal .close-modal:hover {
    opacity: .3;
}

.portfolio-modal .close-modal .lr {
    z-index: 1051;
    width: 1px;
    height: 75px;
    margin-left: 35px;
    background-color: #2c3e50;
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
}

.portfolio-modal .close-modal .lr .rl {
    z-index: 1052;
    width: 1px;
    height: 75px;
    background-color: #2c3e50;
    -webkit-transform: rotate(90deg);
    transform: rotate(90deg);
}

.portfolio-modal .modal-backdrop {
    display: none;
    opacity: 0;
}

/*Johnny's stuff*/
#intro-body {
    height: 100vh;
    width: 100vw;
}

#intro-background {
    position: relative;
    height: 100vh;
    width: 100vw;
}

.img-med-square {
    height: 250px;
    width: 250px;
}

#portfolio {
    background-color: rgba(119, 73, 224, 0.94);
}

#portfolio .portfolio-item a {
    opacity: 1;    
    /*border: 1px solid white;*/
    height: 212px;
    background-color: #E04949;
}

#portfolio .portfolio-item .portfolio-link .caption {
    opacity: 1;
    background-color: transparent;
}

#portfolio .portfolio-item .portfolio-link .caption:hover {
    width: 100%;
    height: 100%;
    opacity: 1;
    padding-top: 10px;
    transition: all ease .5s;
    background-color: rgba(139, 95, 136, 0.88);
}

#portfolio .portfolio-item .portfolio-link .caption i:hover {
    opacity: 1;
}

#about {
    background-color: #E04949;
}

#contact {
    background-color: #4580FF;
}

section {
    min-height: 100vh;
}

section h2 {
    padding-top: 1em;
    padding-bottom: 1.5em;
    color: white;
}

/*TODO figure out how to change placeholder color*/
form .control-group .form-group label {
    color: white;
}

form .control-group * {
    color: white;
}

form .control-group {
    /*background-color: white;*/
}

.email-me-btn-div {
    padding-left: 0;
}

.email-me-btn {
    /*background-color: #FFFFFF;*/
    /*color: #373737;*/
    margin-top: 20px;
}

.johnny-btn {
    border-radius: 0px;
}

.contact-btn {
    /*margin-top: 20%;*/
}

.prof-pic {
    margin-bottom: 100px;
    border: 3px solid white;
    display: inline-block;
    float: right;
}

.contact-btn-container {
    display: inline-block;
}


.project-img {
    height: 100%;
    margin: 0 auto;
}

p {
    color: #FFFFFF;
}


.github-row {
    margin-top: 10%;
    margin-bottom: 5%;
}

.github-link {
       transition: all .5s ease;
    color: #FFFFFF;
}

.github-link:hover {
    transition: all .5s ease;
    color: rgba(101, 19, 136, 0.75);
}


/* Resume styling */
.content-block {
  padding-left: 1em; }

.content-block h3 {
  border-bottom: 1px solid #373737;
}


  .class-list li p {
    display: inline; }
  .class-list li ul {
    display: inline;
    list-style: none;
    padding: 0; }
    .class-list li ul li {
      display: inline; }

#contact-info {
  padding-left: 1em;
  margin-top: 50px;
}
  #contact-info p {
    margin: 0; }

#content div h1 {
  margin: 0; }

#education p {
  display: inline-block;
  text-decoration: none;
}



/*tablet and larger screens*/
@media(min-width:767px) {
    section {
        padding: 0;
        /*height: 100vh;*/
    }
}
/* ... */

